                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 20-04-2006 changed: Altered the way skin labels containing $INFO and $LOCALIZE are parsed, so that they render faster, and you can better indicate which parts of the string should not render if a particular piece of $INFO is empty. More information is available in the online manual.
 - 20-04-2006 fixed: Queuing of music folders that contained playlist files referencing the files in the same folder meant they were added more than once.
 - 19-04-2006 fixed: Loading of pls url's.
 - 19-04-2006 fixed: When using TTF, subtitles encode in UTF-8 are not displayed correctly
 - 19-04-2006 fixed: Various python unicode label issues.
 - 19-04-2006 fixed: Wordwrapping in textbox and label controls wasn't correct for multibyte characters.
 - 19-04-2006 fixed: [ 1471338 ] Input for IP-Adress sometimes wrong
 - 19-04-2006 fixed: When TTF fonts run out of memory, the character cache is cleared.  Should fix movies that develop corrupt subtitles after a while in 1080i.
 - 19-04-2006 fixed: DVD-ROM bookmark could not be edited from the GUI.
 - 19-04-2006 fixed: Karaoke settings are now disabled when CDG reading is disabled.
 - 18-04-2006 fixed: Buffer overrun in FileZip::Read() when reading past the end of file.
 - 18-04-2006 fixed: italic ttf would render chopped of, off center and with invalid spacing.
 - 18-04-2006 fixed: subtitle style setting would display wrong under settings but respect whatever you set it to
 - 18-04-2006 fixed: various rar issues (including browsing dirs with incomplete files).
 - 18-04-2006 fixed: dvd bookmark button label in my programs.
 - 18-04-2006 updated: Finnish language file (Thnx to jutski)